# 3ixam

./: CMakeLists.txt  README.md
build_files/build_environment/: CMakeLists.txt  install_deps.sh
build_files/build_environment/cmake/: alembic.cmake  aom.cmake  blosc.cmake  boost.cmake  boost_build_options.cmake  brotli.cmake  bzip2.cmake  check_software.cmake  cve_check.cmake  cve_check.csv.in  download.cmake  dpcpp.cmake  dpcpp_deps.cmake  embree.cmake  epoxy.cmake  expat.cmake  ffi.cmake  ffmpeg.cmake  fftw.cmake  flac.cmake  flex.cmake  flexbison.cmake  fmt.cmake  freeglut.cmake  freetype.cmake  gmmlib.cmake  gmp.cmake  haru.cmake  harvest.cmake  iconv.cmake  igc.cmake  imath.cmake  ispc.cmake  jemalloc.cmake  jpeg.cmake  lame.cmake  level-zero.cmake  libglu.cmake  llvm.cmake  lzma.cmake  (+56 more)
build_files/build_environment/linux/: linux-centos7-setup.sh
build_files/build_environment/patches/: aom.diff  cmakelists_potrace.txt  cmakelists_pystring.txt  dpcpp.diff  epoxy.diff  osl.diff  (+5 more)
build_files/cmake/: RpmBuild.cmake  buildinfo.cmake  clang_array_check.py  cmake_netbeans_project.py  cmake_print_build_options.py  cmake_qtcreator_project.py  cmake_static_check_clang_array.py  cmake_static_check_cppcheck.py  cmake_static_check_smatch.py  cmake_static_check_sparse.py  cmake_static_check_splint.py  have_features.cmake  macros.cmake  packaging.cmake  project_info.py  project_source_info.py
build_files/config/: pipeline_config.yaml
build_files/package_spec/: build_archive.py
build_files/utils/: make_bpy_wheel.py  make_source_archive.py  make_test.py  make_update.py  make_utils.py
build_files/windows/: build_msbuild.cmd  build_ninja.cmd  check_libraries.cmd  check_spaces_in_path.cmd  check_submodules.cmd  configure_msbuild.cmd  configure_ninja.cmd  detect_architecture.cmd  doc_py.cmd  find_dependencies.cmd  find_ixam.cmd  format.cmd  icons.cmd  icons_geom.cmd  parse_arguments.cmd  show_hashes.cmd  show_help.cmd  svn_fix.cmd  svn_update.cmd  test.cmd  update_sources.cmd
intern/: CMakeLists.txt
intern/atomic/: CMakeLists.txt  atomic_ops.h
intern/audaspace/: CMakeLists.txt
intern/clog/: CLG_log.h  CMakeLists.txt  clog.c
intern/cycles/: CMakeLists.txt
intern/dualcon/: CMakeLists.txt  dualcon.h
intern/eigen/: CMakeLists.txt  eigen_capi.h
intern/ffmpeg/: CMakeLists.txt  ffmpeg_compat.h
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_IContext.h  GHOST_IEvent.h  GHOST_IEventConsumer.h  GHOST_ISystem.h  GHOST_ISystemPaths.h  GHOST_ITimerTask.h  GHOST_IWindow.h  GHOST_IXrContext.h  GHOST_Path-api.h  GHOST_Rect.h  GHOST_Types.h
intern/guardedalloc/: CMakeLists.txt  MEM_guardedalloc.h
intern/iksolver/: CMakeLists.txt
intern/itasc/: Armature.cpp  Armature.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  ConstraintSet.cpp  ConstraintSet.hpp  ControlledObject.cpp  ControlledObject.hpp  CopyPose.cpp  CopyPose.hpp  Distance.cpp  Distance.hpp  FixedObject.cpp  FixedObject.hpp  MovingFrame.cpp  MovingFrame.hpp  Object.hpp  Scene.cpp  Scene.hpp  Solver.hpp  UncontrolledObject.cpp  UncontrolledObject.hpp  WDLSSolver.cpp  WDLSSolver.hpp  WSDLSSolver.cpp  WSDLSSolver.hpp  WorldObject.cpp  WorldObject.hpp  eigen_types.cpp  eigen_types.hpp  ublas_types.hpp
intern/libc_compat/: CMakeLists.txt  libc_compat.c
intern/libmv/: CMakeLists.txt  ChangeLog  bundle.sh  libmv-capi.h  mkfiles.sh
intern/locale/: CMakeLists.txt  boost_locale_wrapper.cpp  boost_locale_wrapper.h  osx_user_locale.mm
intern/mantaflow/: CMakeLists.txt
intern/memutil/: CMakeLists.txt  MEM_Allocator.h  MEM_CacheLimiter.h  MEM_CacheLimiterC-Api.h  MEM_RefCounted.h  MEM_RefCountedC-Api.h
intern/mikktspace/: CMakeLists.txt  mikk_atomic_hash_set.hh  mikk_float3.hh  mikk_util.hh  mikktspace.hh
intern/opencolorio/: CMakeLists.txt  fallback_impl.cc  gpu_shader_display_transform_frag.glsl  ocio_capi.cc  ocio_capi.h  ocio_impl.cc  ocio_impl.h  ocio_impl_glsl.cc  ocio_shader_shared.hh
intern/opensubdiv/: CMakeLists.txt  opensubdiv_capi.h  opensubdiv_capi_type.h  opensubdiv_converter_capi.h  opensubdiv_evaluator_capi.h  opensubdiv_topology_refiner_capi.h
intern/openvdb/: CMakeLists.txt  openvdb_capi.cc  openvdb_capi.h
intern/quadriflow/: CMakeLists.txt  quadriflow_capi.cpp  quadriflow_capi.hpp
intern/rigidbody/: CMakeLists.txt  RBI_api.h  RBI_hull_api.h  rb_bullet_api.cpp  rb_convex_hull_api.cpp
intern/sky/: CMakeLists.txt
intern/utfconv/: CMakeLists.txt  utf_winfunc.c  utf_winfunc.h  utfconv.c  utfconv.h
intern/wayland_dynload/: CMakeLists.txt
release/darwin/: background.tif  entitlements.plist  ixam.applescript
release/datafiles/: alert_icons_update.py  ctodata.py  ixam_icons_geom.py  ixam_icons_geom_update.py  ixam_icons_update.py  preview.ixam  preview_grease_pencil.ixam  prvicons_update.py
release/text/: readme.html
source/: CMakeLists.txt
source/creator/: CMakeLists.txt  buildinfo.c  creator.c  creator_args.c  creator_intern.h  creator_signals.c  ixam_launcher_win32.c  symbols_apple.map
source/creator/time_bomb/: CMakeLists.txt
source/creator/time_bomb/include/time_bomb/: time_bomb.h
source/creator/time_bomb/private/: time_bomb.cpp
source/ixam/: CMakeLists.txt
source/ixam/ixamthumb/: CMakeLists.txt
source/ixam/ixamthumb/src/: ixam_thumbnailer.cc  ixamthumb.hh  ixamthumb_extract.cc  ixamthumb_png.cc  ixamthumb_win32.cc  ixamthumb_win32.rc  ixamthumb_win32_dll.cc
source/ixam/ixamtranslation/: BLT_lang.h  BLT_translation.h  CMakeLists.txt
source/ixam/ixamtranslation/intern/: blt_lang.c  blt_translation.c
source/ixam/ixamtranslation/msgfmt/: CMakeLists.txt  msgfmt.c
source/tools/: readme.rst
(+7796 files in other folders)
